# fibonacci

lib/: Cargo.toml
lib/src/: lib.rs  main.rs
program/: Cargo.toml
program/src/: main.rs
